Update on Overleaf.

--- a/template.tex
+++ b/template.tex
@@ -25,7 +25,7 @@
 \maketitle
 
 \begin{abstract}
-Abstract
+Abstract. change to see if Overleaf-GitHub integration is good
 \end{abstract}
 
 \section{Introduction}
