--- a/template.tex
+++ b/template.tex
@@ -25,7 +25,7 @@
 \maketitle
 
 \begin{abstract}
-Abstract. change to see if Overleaf-GitHub integration is good
+Abstract. change to see if Overleaf-GitHub integration is good, guess it would work
 \end{abstract}
 
 \section{Introduction}
