--- a/template.tex
+++ b/template.tex
@@ -7,6 +7,7 @@
 \usepackage{booktabs}       % professional-quality tables
 \usepackage{amsfonts}       % blackboard math symbols
 \usepackage{amsmath}
+\usepackage{graphicx}
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
 \usepackage{lipsum}
@@ -61,6 +62,12 @@ f(E) &= |\psi(t)|^2 \\
 
 Such distribution is called a Breit-Wigner distribution.
 
+\begin{figure}
+    \centering
+    \includegraphics{figures/genericPotential.png}
+    \caption{Generic 1-dimensional potential}
+    \label{fig:genericPotential}
+\end{figure}
 
 \bibliographystyle{unsrt}  
 \begin{thebibliography}{1}
